--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,27 +1,21 @@
-.cards > ul {
+.cards {
   list-style: none;
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(257px, 1fr));
-  grid-gap: 24px;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 16px;
 }
 
-.cards > ul > li {
-  border: 1px solid #dadada;
-  background-color: var(--background-color);
+
+@media (min-width: 900px) {
+  .cards.scroll > ul > li {
+      width: calc(100%/3);
+  }
 }
 
-.cards .cards-card-body {
-  margin: 16px;
-}
-
-.cards .cards-card-image {
-  line-height: 0;
-}
-
-.cards > ul > li img {
-  width: 100%;
-  aspect-ratio: 4 / 3;
-  object-fit: cover;
+@media (min-width: 1200px) {
+  .cards.scroll > ul > li {
+      width: calc(100%/4);
+  }
 }
